--- a/packages/frontend/.sample.env
+++ b/packages/frontend/.sample.env
@@ -1,3 +1,2 @@
-REACT_APP_METADATA_API_BASE_URL=http://localhost:5000 address of server started with yarn backend:dev
-REACT_APP_INFURA_PROJECT_ID=Infura project ID: https://infura.io/
-REACT_APP_INFURA_NETWORK=one of the following: localhost, rinkeby, kovan, mainnet
+VITE_INFURA_PROJECT_ID=Infura project ID: https://infura.io/
+VITE_INFURA_NETWORK=one of the following: localhost, rinkeby, kovan, mainnet
